# backend/routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\CashierController;
 use App\Http\Controllers\Api\StoreController;
 use App\Http\Controllers\Api\UserController;
 use Illuminate\Support\Facades\Route;
@@ -10,9 +11,13 @@ Route::post('/login', [AuthController::class, 'login']);
 Route::middleware('auth:api')->group(function () {
     Route::get('/me', [AuthController::class, 'me']);
     Route::post('/logout', [AuthController::class, 'logout']);
-});
 
-Route::middleware(['auth:api', 'role:super_admin'])->group(function () {
-    Route::apiResource('stores', StoreController::class);
-    Route::apiResource('users', UserController::class);
+    Route::middleware('role:super_admin')->group(function () {
+        Route::apiResource('stores', StoreController::class);
+        Route::apiResource('users', UserController::class);
+    });
+
+    Route::middleware('role:admin')->group(function () {
+        Route::apiResource('cashiers', CashierController::class);
+    });
 });
